--- a/html/0-3_main-login.html
+++ b/html/0-3_main-login.html
@@ -90,7 +90,7 @@
     <section id="contents">
         <div class="row grid">
             <div class="container item col-8 m960-col-12">
-                <h2 class="contents-title">청년인재데이터베이스 소개</h2>
+                <h2 class="contents-title">청년인재데이터베이스 <span>소개</span></h2>
                 <p>
                     청년인재데이터베이스는 국가공무원법 제19조의3에 의하여 대한민국 정부의 주요직위 인선 시 우수인재를 임용할 수 있도록 공직후보자에 대한 정보를 수집하고 관리하는 국가인물정보관리 시스템입니다. <br>
 1999년 구축하여 현재 사회 각 분야 전문가 30만 여명이 수록되어 있습니다. 청년인재데이터베이스는 국가공무원법 제19조의3에 의하여 대한민국 정부의 주요직위 인선 시 우수인재를 임용할 수 있도록 공직후보자에 대한 정보를 수집하고 관리하는 국가인물정보관리 시스템입니다. <br>
@@ -109,7 +109,7 @@
                 <div class="btn-wrap">
                     <button class="btn-bl btn-nomal btn-full">나의 인재정보 등록</button>
                 </div>
-                <div class="btn-wrap">
+                <div class="btn-wrap two-btn-wrap">
                     <button class="btn-wh btn-nomal">마이페이지</button>
                     <button class="btn-close btn-nomal">로그아웃</button>
                 </div>
@@ -195,7 +195,7 @@
             </div>
             <ul class="modal-menu-list">
                 <!-- .menu-step1에 .menu-on 추가하면 메뉴 오픈됩니다 -->
-                <li class="menu-step1 menu-on">
+                <li class="menu-step1">
                     <p>청년인재데이터베이스</p>
                     <ul>
                         <li class="menu-step2"><a href="#">청년인재데이터베이스</a></li>
