--- a/html/1-11_회원가입-가입내역인쇄(기관용).html
+++ b/html/1-11_회원가입-가입내역인쇄(기관용).html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/common.css">
@@ -90,39 +91,39 @@
                         <div class="join-info">
                             <div class="b-item">
                                 <label for="">아이디</label>
-                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="admin2022" class="input-nomal w300">
+                                <input type="text" readonly  onfocus="this.blur()" value="admin2022" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">사용자명</label>
-                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="홍길동" class="input-nomal w300">
+                                <input type="text" readonly  onfocus="this.blur()" value="홍길동" class="input-nomal w300">
                             </div>
                         </div>
                         <div class="join-info">
                             <div class="b-item">
                                 <label for="">소속기관</label>
-                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="국무조정실「청년정책조정실」" class="input-nomal w300">
+                                <input type="text" readonly  onfocus="this.blur()" value="국무조정실「청년정책조정실」" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">부서명</label>
-                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="부서명" class="input-nomal w300">
+                                <input type="text" readonly  onfocus="this.blur()" value="부서명" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">직장전화</label>
-                                <input type="tel" readonly="readonly"  onfocus="this.blur()" value="042-123-4567" class="input-nomal w300">
+                                <input type="tel" readonly  onfocus="this.blur()" value="042-123-4567" class="input-nomal w300">
                             </div>
                         </div>
                         <div class="join-info">
                             <div class="b-item">
                                 <label for="">대표전화</label>
-                                <input type="tel" readonly="readonly"  onfocus="this.blur()" value="010-1234-5678" class="input-nomal w300">
+                                <input type="tel" readonly  onfocus="this.blur()" value="010-1234-5678" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">이메일</label>
-                                <input type="email" readonly="readonly"  onfocus="this.blur()" value="admin2022@email.com" class="input-nomal w300">
+                                <input type="email" readonly  onfocus="this.blur()" value="admin2022@email.com" class="input-nomal w300">
                             </div>
                             <div class="b-item">
                                 <label for="">IP주소</label>
-                                <input type="text" readonly="readonly"  onfocus="this.blur()" value="123.123.123" class="input-nomal w300">
+                                <input type="text" readonly  onfocus="this.blur()" value="123.123.123" class="input-nomal w300">
                             </div>
                         </div>
                     </div>
@@ -245,7 +246,7 @@
             </div>
             <ul class="modal-menu-list">
                 <!-- .menu-step1에 .menu-on 추가하면 메뉴 오픈됩니다 -->
-                <li class="menu-step1 menu-on">
+                <li class="menu-step1">
                     <p>청년인재데이터베이스</p>
                     <ul>
                         <li class="menu-step2"><a href="#">청년인재데이터베이스</a></li>
