--- a/html/1-4_회원가입-이용동의(인재용).html
+++ b/html/1-4_회원가입-이용동의(인재용).html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/common.css">
@@ -103,7 +104,7 @@
                                 <div class="table-nomal-td underline">만 39세 경과 시 또는 삭제요청 시까지</div>
                             </div>
                         </div>
-                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <p class="table-nomal-footnote">※ 위 사항에 대하여 동의를 거부할 권리가 있으며, 동의 거부 시에는 인재등록 이용이 제한됩니다.</p>
                         <div class="agree-wrap">
                             <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
                             <input type="radio" name="ra1" id="ra1"><label for="ra1" class="radio-small mr20">동의함</label>
@@ -130,7 +131,7 @@
                                 <div class="table-nomal-td underline">만 39세 경과 시 또는 삭제요청 시까지</div>
                             </div>
                         </div>
-                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <p class="table-nomal-footnote">※ 위 사항에 대하여 동의를 거부할 권리가 있으며, 동의 거부 시에는 인재등록 이용이 제한됩니다.</p>
                         <div class="agree-wrap">
                             <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
                             <input type="radio" name="ra2" id="ra3"><label for="ra3" class="radio-small mr20">동의함</label>
@@ -162,7 +163,7 @@
                                 <div class="table-nomal-td underline">정보활용목적 완료시까지</div>
                             </div>
                         </div>
-                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <p class="table-nomal-footnote">※ 위 사항에 대하여 동의를 거부할 권리가 있으며, 동의 거부 시에는 인재등록 이용이 제한됩니다.</p>
                         <div class="agree-wrap">
                             <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
                             <input type="radio" name="ra3" id="ra5"><label for="ra5" class="radio-small mr20">동의함</label>
@@ -192,7 +193,7 @@
 휴대전화, 전자우편, 주된 활동지역, 학교경력, 직장경력, 관심분야, 주요 활동사항, 주요 결과물, 참여희망 분야, 지원동기</div>
                             </div>
                         </div>
-                        <p class="table-nomal-footnote">※ 인물정보 등록시 청년인재DB 본인추천으로 수록∙관리됩니다.</p>
+                        <p class="table-nomal-footnote">※ 위 사항에 대하여 동의를 거부할 권리가 있으며, 동의 거부 시에는 인재등록 이용이 제한됩니다.</p>
                         <div class="agree-wrap">
                             <span>위의 개인정보의 수집ㆍ이용에 동의하십니까? (</span>
                             <input type="radio" name="ra4" id="ra7"><label for="ra7" class="radio-small mr20">동의함</label>
@@ -267,7 +268,7 @@
             </div>
             <ul class="modal-menu-list">
                 <!-- .menu-step1에 .menu-on 추가하면 메뉴 오픈됩니다 -->
-                <li class="menu-step1 menu-on">
+                <li class="menu-step1">
                     <p>청년인재데이터베이스</p>
                     <ul>
                         <li class="menu-step2"><a href="#">청년인재데이터베이스</a></li>
