--- a/html/7-5_공지사항-faq.html
+++ b/html/7-5_공지사항-faq.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/common.css">
@@ -106,14 +107,13 @@
           </div>
           <div class="faq-wrap">
               <!-- 질문 열었을 때 .active를 붙이면 화살표 방향이 바뀝니다. -->
-              <a href="">
-                <div class="question active">
-                  <div>
-                    <div class="q-icon"></div>
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </div>
-                  <div class="accoBtn"></div>
+              
+              <a href="javascript:void(0)" class="question">
+                <div>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
+                <div class="accoBtn"></div>
               </a>
               <div class="answer">
                 <p>
@@ -121,78 +121,123 @@
                     더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
                 </p>
               </div>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-            <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
-                        <a href="#">
-              <div class="question">
+              <a href="javascript:void(0)" class="question">
                 <div>
                   <div class="q-icon"></div>
                   <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
                 <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </a>
+              <a href="javascript:void(0)" class="question">
+                <div>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
+                </div>
+                <div class="accoBtn"></div>
+              </a>
+              <div class="answer">
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
+              </div>
           </div>
           <div class="pagination">
             <button class="prev"></button>
@@ -256,7 +301,7 @@
             </div>
             <ul class="modal-menu-list">
                 <!-- .menu-step1에 .menu-on 추가하면 메뉴 오픈됩니다 -->
-                <li class="menu-step1 menu-on">
+                <li class="menu-step1">
                     <p>청년인재데이터베이스</p>
                     <ul>
                         <li class="menu-step2"><a href="#">청년인재데이터베이스</a></li>
