--- a/html/7-2_공지사항-작성.html
+++ b/html/7-2_공지사항-작성.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/common.css">
@@ -163,24 +164,9 @@
                           <label for="fileUp">파일 선택</label>
                         
                         <div class="w100p ml10">
-                              <!-- 파일이 선택되었을 때 file-not-sel 대신 file-sel 클래스명이 들어가야 합니다.  -->
                               <div class="file-not-sel input-nomal w100p">
                                 <p>첨부된 파일이 없습니다.</p>
-                                <div>
-                                  <div></div>
-                                  <p>경로</p>
-                                  <button></button>
-                                </div>
                               </div>
-                              <!-- 파일 선택 되었을 때 -->
-                              <div class="file-sel input-nomal w100p">
-                                <p>첨부된 파일이 없습니다.</p>
-                                <div>
-                                    <div></div>
-                                    <p>경로</p>
-                                    <button></button>
-                                </div>
-                            </div>
                         </div>
                       </div>
                     </div>
@@ -190,7 +176,7 @@
                 </form>
             <div class="btn-wrap form-btn-wrap flex-end">
                 <button class="btn-close btn-round">취소</button>
-                <button class="btn-bl btn-round">작성</button>
+                <button class="btn-bl btn-round">저장</button>
             </div>
         </div>
     </section>
@@ -248,7 +234,7 @@
             </div>
             <ul class="modal-menu-list">
                 <!-- .menu-step1에 .menu-on 추가하면 메뉴 오픈됩니다 -->
-                <li class="menu-step1 menu-on">
+                <li class="menu-step1">
                     <p>청년인재데이터베이스</p>
                     <ul>
                         <li class="menu-step2"><a href="#">청년인재데이터베이스</a></li>
@@ -286,6 +272,7 @@
     <script src="http://code.jquery.com/jquery-migrate-1.2.1.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="/js/main.js"></script>
+    <script src="/js/data.js"></script>
 </body>
 </html>
 
